k8s/mern/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mern-app
  labels:
    app: mern-stack
